--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FFF</color>
-
-    <color name="white">#FFF</color>
+    <color name="colorPrimary">@color/lightBlue</color>
+    <color name="colorPrimaryDark">@color/darkGrey</color>
+    <color name="colorAccent">@color/white</color>
     <color name="action_bar">@color/white</color>
-    <color name="colorBackgroundBlue">#2196F3</color>
+    <color name="colorBackgroundBlue">@color/lightBlue</color>
+    <color name="colorSecondColor">@color/orange</color>
+    <color name="colorBackgroundGrey">@color/lightGrey</color>
+    <color name="colorBackgroundDark">@color/darkGrey</color>
+
+    <color name="lightBlue">#2196F3</color>
+    <color name="orange">#FF9A13</color>
+    <color name="white">#FFF</color>
+    <color name="lightGrey">#F8F8F8</color>
+    <color name="darkGrey">#0A1A27</color>
 </resources>
