--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="android:textColorSecondary">#FFF</item>
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 
     <style name="UnderlineTheme" parent="android:Widget.EditText">
