Autocomplete in edittext + formatting

--- a/app/src/main/res/layout/create.xml
+++ b/app/src/main/res/layout/create.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:onClick="saveData">
+
     <RelativeLayout
         android:id="@+id/relativeLayoutVon"
         android:layout_width="match_parent"
@@ -9,133 +11,148 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#2196F3">
+
         <TextView
             android:id="@+id/textViewVon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Von:"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:gravity="center"
+            android:layout_alignParentTop="true"
             android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:text="Von:"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ffffff" />
+
         <AutoCompleteTextView
             android:id="@+id/editTextVon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:hint="Braunschweig"
-            android:textColor="#d4d4d4"
             android:layout_toRightOf="@id/textViewVon"
-            />
+            android:hint="Braunschweig"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#d4d4d4" />
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/relativeLayoutNach"
-        android:layout_below="@id/relativeLayoutVon"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@id/relativeLayoutVon"
         android:background="#2196F3">
+
         <TextView
             android:id="@+id/textViewNach"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Nach:"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:gravity="center"
+            android:layout_alignParentTop="true"
             android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:text="Nach:"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ffffff" />
-        <EditText
+
+        <AutoCompleteTextView
             android:id="@+id/editTextNach"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:hint="Braunschweig"
-            android:textColor="#d4d4d4"
             android:layout_toRightOf="@id/textViewNach"
-            />
+            android:hint="Braunschweig"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#d4d4d4" />
     </RelativeLayout>
-
-
 
     <RelativeLayout
         android:id="@+id/relativeLayoutZeit"
-        android:layout_below="@id/relativeLayoutNach"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@id/relativeLayoutNach"
         android:background="#2196F3">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <!--
-            Abfahrts text in folgendes Schema ändern:
-            08.04. 9:45
-            -->
-            <Button
 
-                android:text="Abfahrt"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:clickable="false" />
-            <!--
-            Ankunfts text in folgendes Schema ändern:
-            08.04. 9:45
-            -->
             <Button
+                android:id="@+id/buttonAbfahrt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/relativeLayoutNach"
                 android:layout_weight="1"
+                android:background="@color/colorBackgroundBlue"
+                android:text="Abfahrt"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/buttonAnkunft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/relativeLayoutNach"
+                android:layout_weight="1"
+                android:background="@color/colorBackgroundBlue"
                 android:text="Ankunft"
-                />
+                android:textColor="@color/white" />
         </LinearLayout>
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/relativeLayoutDescription"
-        android:layout_below="@id/relativeLayoutZeit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@id/relativeLayoutZeit"
         android:background="#2196F3">
+
         <TextView
             android:id="@+id/textViewBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Beschreibung"/>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:text="Beschreibung:"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#ffffff" />
+
         <EditText
-            android:layout_toRightOf="@id/textViewBeschreibung"
+            android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
+            android:layout_toRightOf="@id/textViewBeschreibung"
             android:ems="10"
-            android:id="@+id/editText"/>
+            android:inputType="textMultiLine" />
 
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_below="@id/relativeLayoutDescription"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        android:layout_below="@id/relativeLayoutDescription">
+
         <Button
+            android:id="@+id/buttonErstellen"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Erstellen"/>
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout"
+            android:layout_centerInParent="true"
+            android:layout_weight="1"
+            android:background="@color/orange"
+            android:onClick="saveData"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="Erstellen"
+            android:textColor="@color/white" />
     </RelativeLayout>
-
-    <!-- MULTILINE TEXT-->
-
-
 </RelativeLayout>
