--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -1,37 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
     android:background="#FFF">
 
-
     <TextView
-        android:id="@+id/list_group_TextVon"
-        android:layout_width="fill_parent"
+        android:id="@+id/departurecity"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:text="Braunschweig"/>
+        android:textSize="17dip"
+        android:text="Berlin"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <ImageView
-        android:id="@+id/list_group_imageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_toRightOf="@id/list_group_TextVon"/>
-
-    <TextView
-        android:id="@+id/list_group_TextNach"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/list_group_imageView"
-        android:text="Hannover"/>
+        android:id="@+id/arrowToRight"
+        android:src="@drawable/arrow"
+        android:layout_toRightOf="@+id/departurecity"/>
 
     <TextView
-        android:id="@+id/list_group_Datum"
+        android:id="@+id/arrivalcity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/list_group_TextNach"
-        android:text="12:33"/>
+        android:layout_centerVertical="true"
+        android:textSize="17dip"
+        android:text="Hamburg"
+        android:layout_toRightOf="@+id/arrowToRight"/>
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:textSize="17dip"
+        android:text="14:27"
+        android:layout_centerVertical="true"
+        android:layout_alignBaseline="@+id/arrivalcity"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/arrivalcity"
+        android:layout_alignParentEnd="true"/>
 
-</LinearLayout>
+
+</RelativeLayout>
