--- a/app/src/main/res/layout/create.xml
+++ b/app/src/main/res/layout/create.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/relativeLayoutVon"
+        android:id="@+id/relativeLayoutCreateDeparture"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
@@ -12,7 +12,7 @@
         android:background="#2196F3">
 
         <TextView
-            android:id="@+id/textViewVon"
+            android:id="@+id/textViewDepartureCity"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
@@ -25,10 +25,10 @@
             android:textColor="#ffffff"/>
 
         <AutoCompleteTextView
-            android:id="@+id/editTextVon"
+            android:id="@+id/autoCompleteTextViewDepartureCity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/textViewVon"
+            android:layout_toRightOf="@id/textViewDepartureCity"
             android:hint="Braunschweig..."
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"/>
@@ -36,16 +36,16 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relativeLayoutNach"
+        android:id="@+id/relativeLayoutCreateArrival"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/relativeLayoutVon"
+        android:layout_below="@id/relativeLayoutCreateDeparture"
         android:background="#2196F3">
 
         <TextView
-            android:id="@+id/textViewNach"
+            android:id="@+id/textViewArrivalCity"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
@@ -58,10 +58,10 @@
             android:textColor="#ffffff"/>
 
         <AutoCompleteTextView
-            android:id="@+id/editTextNach"
+            android:id="@+id/autoCompleteTextViewArrivalCity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/textViewNach"
+            android:layout_toRightOf="@id/textViewArrivalCity"
             android:hint="Hamburg..."
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"
@@ -70,12 +70,12 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relativeLayoutZeit"
+        android:id="@+id/relativeLayoutCreateTimes"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/relativeLayoutNach"
+        android:layout_below="@id/relativeLayoutCreateArrival"
         android:background="#2196F3">
 
         <LinearLayout
@@ -83,22 +83,22 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/buttonAbfahrt"
+                android:id="@+id/buttonDeparture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@+id/relativeLayoutNach"
+                android:layout_below="@+id/relativeLayoutCreateArrival"
                 android:layout_weight="1"
                 android:background="@color/colorBackgroundBlue"
                 android:text="Abfahrt"
                 android:textColor="@color/white"/>
 
             <Button
-                android:id="@+id/buttonAnkunft"
+                android:id="@+id/buttonArrival"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@+id/relativeLayoutNach"
+                android:layout_below="@+id/relativeLayoutCreateArrival"
                 android:layout_weight="1"
                 android:background="@color/colorBackgroundBlue"
                 android:text="Ankunft"
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/relativeLayoutZeit"
+        android:layout_below="@id/relativeLayoutCreateTimes"
         android:background="#2196F3">
 
         <TextView
@@ -129,7 +129,7 @@
             android:textColor="#ffffff"/>
 
         <EditText
-            android:id="@+id/descriptionEditText"
+            android:id="@+id/editTextDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/textViewBeschreibung"
@@ -145,7 +145,7 @@
         android:layout_below="@id/relativeLayoutDescription">
 
         <Button
-            android:id="@+id/buttonErstellen"
+            android:id="@+id/buttonCreateRide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout"
