Moved parts + refactoring
Set listeners etc. + functionality

--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -4,4 +4,6 @@
           android:title="Suchen"/>
     <item android:id="@+id/create"
           android:title="Erstellen" />
+    <item android:id="@+id/createNew"
+          android:title="Create New" />
 </menu>
