Implemented Listeners for Search Activity
refactoring ++

--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -4,6 +4,8 @@
           android:title="Suchen"/>
     <item android:id="@+id/create"
           android:title="Erstellen" />
+    <item android:id="@+id/searchNew"
+          android:title="Search New" />
     <item android:id="@+id/createNew"
           android:title="Create New" />
 </menu>
