--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/searchNew"
-          android:title="Search" />
+          android:title="Suchen" />
     <item android:id="@+id/createNew"
-          android:title="Create" />
+          android:title="Erstellen" />
 </menu>
