--- a/app/src/main/res/layout/autocompletetext.xml
+++ b/app/src/main/res/layout/autocompletetext.xml
@@ -7,4 +7,4 @@
           android:singleLine="true"
           android:background="#FFF"
           android:gravity="center"
-          android:layout_height="fill_parent"/>
+          android:layout_height="40dp"/>
