--- a/app/src/main/res/layout/create.xml
+++ b/app/src/main/res/layout/create.xml
@@ -20,7 +20,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="5dp"
             android:gravity="center"
-            android:text="Von:"
+            android:text="@string/layout_from"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ffffff"/>
 
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/textViewDepartureCity"
-            android:hint="Braunschweig..."
+            android:hint="@string/layout_hintFrom"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"/>
         />
@@ -53,7 +53,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="5dp"
             android:gravity="center"
-            android:text="Nach:"
+            android:text="@string/layout_to"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ffffff"/>
 
@@ -62,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/textViewArrivalCity"
-            android:hint="Hamburg..."
+            android:hint="@string/layout_hintTo"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"
 
@@ -90,7 +90,7 @@
                 android:layout_below="@+id/relativeLayoutCreateArrival"
                 android:layout_weight="1"
                 android:background="@color/colorBackgroundBlue"
-                android:text="Abfahrt"
+                android:text="@string/layout_departure"
                 android:textColor="@color/white"/>
 
             <Button
@@ -101,7 +101,7 @@
                 android:layout_below="@+id/relativeLayoutCreateArrival"
                 android:layout_weight="1"
                 android:background="@color/colorBackgroundBlue"
-                android:text="Ankunft"
+                android:text="@string/layout_arrival"
                 android:textColor="@color/white"/>
         </LinearLayout>
     </RelativeLayout>
@@ -124,7 +124,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="5dp"
             android:gravity="center"
-            android:text="Beschreibung:"
+            android:text="@string/layout_description"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ffffff"/>
 
@@ -154,7 +154,7 @@
             android:background="@color/orange"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="Erstellen"
+            android:text="@string/layout_create"
             android:textColor="@color/white"/>
     </RelativeLayout>
 </RelativeLayout>
